[gd_scene load_steps=52 format=2]

[ext_resource path="res://Src/Autoload/Audio/Audio.gd" type="Script" id=1]
[ext_resource path="res://Src/Autoload/Audio/SfxController.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/Sfx/enemy_dead.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/Sfx/enemy_damage.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/Sfx/buster_fullshot.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/Sfx/buster_minishot.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/Sfx/boulder.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/Sfx/buster_charging.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/Sfx/chain_loop.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/Sfx/chain_rise.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Audio/Sfx/concrete_down.wav" type="AudioStream" id=11]
[ext_resource path="res://Src/Autoload/Audio/BgmEffectAnim.gd" type="Script" id=12]
[ext_resource path="res://Src/Autoload/Audio/Sfxes.gd" type="Script" id=13]
[ext_resource path="res://Src/Autoload/Audio/BgmPlayer.gd" type="Script" id=14]
[ext_resource path="res://Assets/Audio/Sfx/chain_end.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Audio/Sfx/concrete_up.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Audio/Sfx/enemy_shot.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/Audio/Sfx/energy_fill.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/Audio/Sfx/cursor_sw.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/Audio/Sfx/boss_door.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/Audio/Sfx/buster.wav" type="AudioStream" id=21]
[ext_resource path="res://Assets/Audio/Sfx/beat.wav" type="AudioStream" id=22]
[ext_resource path="res://Assets/Audio/Sfx/capcom.wav" type="AudioStream" id=23]
[ext_resource path="res://Assets/Audio/Sfx/landing.wav" type="AudioStream" id=24]
[ext_resource path="res://Assets/Audio/Sfx/player_damage.wav" type="AudioStream" id=25]
[ext_resource path="res://Assets/Audio/Sfx/player_dead.wav" type="AudioStream" id=26]
[ext_resource path="res://Assets/Audio/Sfx/teleport_out.wav" type="AudioStream" id=27]
[ext_resource path="res://Assets/Audio/Sfx/thunder.wav" type="AudioStream" id=28]
[ext_resource path="res://Assets/Audio/Sfx/teleport_in.wav" type="AudioStream" id=29]
[ext_resource path="res://Assets/Audio/Sfx/shadowblade.wav" type="AudioStream" id=30]
[ext_resource path="res://Assets/Audio/Sfx/powerlaunch.wav" type="AudioStream" id=31]
[ext_resource path="res://Assets/Audio/Sfx/powerfall.wav" type="AudioStream" id=32]
[ext_resource path="res://Assets/Audio/Sfx/one_up.wav" type="AudioStream" id=33]
[ext_resource path="res://Assets/Audio/Sfx/ring_boomerang.wav" type="AudioStream" id=34]
[ext_resource path="res://Assets/Audio/Sfx/pause.wav" type="AudioStream" id=35]
[ext_resource path="res://Assets/Audio/Sfx/wheel_cutter_wall.wav" type="AudioStream" id=36]
[ext_resource path="res://Assets/Audio/Sfx/powerlanding.wav" type="AudioStream" id=37]
[ext_resource path="res://Assets/Audio/Sfx/explosion2.wav" type="AudioStream" id=38]
[ext_resource path="res://Assets/Audio/Sfx/explosion.wav" type="AudioStream" id=39]
[ext_resource path="res://Assets/Audio/Sfx/reflect.wav" type="AudioStream" id=40]
[ext_resource path="res://Assets/Audio/Sfx/wheel_cutter.wav" type="AudioStream" id=41]
[ext_resource path="res://Assets/Audio/Sfx/start.wav" type="AudioStream" id=42]
[ext_resource path="res://Assets/Audio/Sfx/select.wav" type="AudioStream" id=43]
[ext_resource path="res://Assets/Audio/Sfx/fall.wav" type="AudioStream" id=44]
[ext_resource path="res://Assets/Audio/Sfx/hop.wav" type="AudioStream" id=45]
[ext_resource path="res://Assets/Audio/Sfx/crash_bomb.wav" type="AudioStream" id=46]

[sub_resource type="Animation" id=1]
resource_name = "Dim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -6.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.450625, 1 ),
"update": 0,
"values": [ -60.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.0, 0.0 ]
}

[node name="Audio" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BgmPlayer" type="Node" parent="."]
script = ExtResource( 14 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="BgmPlayer"]
bus = "BGM"

[node name="BgmEffectAnim" type="AnimationPlayer" parent="BgmPlayer/AudioStreamPlayer"]
anims/Dim = SubResource( 1 )
anims/FadeIn = SubResource( 2 )
anims/FadeOutNoStop = SubResource( 3 )
anims/FadeOutStop = SubResource( 4 )
anims/Undim = SubResource( 5 )
script = ExtResource( 12 )

[node name="Sfxes" type="Node" parent="."]
script = ExtResource( 13 )

[node name="beat" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 22 )
volume_db = 5.0
pitch_scale = 0.85
bus = "SFX"

[node name="boss_door" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 20 )
volume_db = 1.0
bus = "SFX"

[node name="boulder" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 7 )
volume_db = -4.0
bus = "SFX"

[node name="buster" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 21 )
volume_db = -7.0
bus = "SFX"

[node name="buster_charging" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 8 )
volume_db = -7.0
bus = "SFX"

[node name="buster_fullshot" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 5 )
volume_db = -2.0
bus = "SFX"

[node name="buster_minishot" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 6 )
volume_db = -3.0
bus = "SFX"

[node name="capcom" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 23 )
bus = "SFX"

[node name="chain_end" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 15 )
volume_db = 5.0
bus = "SFX"

[node name="chain_loop" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 9 )
volume_db = 3.0
bus = "SFX"

[node name="chain_rise" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 10 )
volume_db = 5.0
bus = "SFX"

[node name="concrete_down" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 11 )
volume_db = -4.0
bus = "SFX"

[node name="concrete_up" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 16 )
volume_db = -4.0
bus = "SFX"

[node name="crash_bomb" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 46 )
volume_db = 3.0
bus = "SFX"

[node name="cursor_sw" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 19 )
bus = "SFX"

[node name="enemy_damage" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="enemy_dead" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 3 )
bus = "SFX"

[node name="enemy_shot" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 17 )
bus = "SFX"

[node name="energy_fill" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 18 )
bus = "SFX"

[node name="explosion2" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 38 )
volume_db = -4.0
bus = "SFX"

[node name="explosion" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 39 )
volume_db = -4.0
bus = "SFX"

[node name="fall" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 44 )
volume_db = 3.0
bus = "SFX"

[node name="hop" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 45 )
volume_db = 6.0
bus = "SFX"

[node name="landing" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 24 )
volume_db = -3.0
bus = "SFX"

[node name="oneup" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 33 )
volume_db = -9.0
bus = "SFX"

[node name="pause" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 35 )
volume_db = 3.0
bus = "SFX"

[node name="player_damage" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 25 )
bus = "SFX"

[node name="player_dead" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 26 )
volume_db = -3.0
bus = "SFX"

[node name="powerfall" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 32 )
volume_db = -8.0
bus = "SFX"

[node name="powerlanding" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 37 )
volume_db = -8.0
bus = "SFX"

[node name="powerlaunch" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 31 )
volume_db = -8.0
bus = "SFX"

[node name="reflect" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 40 )
volume_db = -3.0
bus = "SFX"

[node name="ring_boomerang" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 34 )
bus = "SFX"

[node name="select" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 43 )
bus = "SFX"

[node name="shadowblade" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 30 )
volume_db = 3.0
bus = "SFX"

[node name="start" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 42 )
volume_db = -3.0
bus = "SFX"

[node name="teleport_in" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 29 )
volume_db = -3.0
bus = "SFX"

[node name="teleport_out" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 27 )
bus = "SFX"

[node name="thunder" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 28 )
volume_db = 6.0
bus = "SFX"

[node name="wheel_cutter" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 41 )
volume_db = -4.0
bus = "SFX"

[node name="wheel_cutter_wall" type="AudioStreamPlayer" parent="Sfxes"]
stream = ExtResource( 36 )
volume_db = -4.0
bus = "SFX"

[node name="SfxController" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="about_to_play" from="Sfxes" to="SfxController" method="_on_Sfxes_about_to_play"]
[connection signal="playing" from="Sfxes" to="SfxController" method="_on_Sfxes_playing"]
